Time: 1 ms (100.00%), Space: 43.2 MB (17.13%) - LeetHub