@@ -1,34 +1,27 @@
 class Solution {
-
-    protected void backtrack(
-            int remain,
-            LinkedList<Integer> comb,
-            int start, int[] candidates,
-            List<List<Integer>> results) {
-
-        if (remain == 0) {
-            // make a deep copy of the current combination
-            results.add(new ArrayList<Integer>(comb));
-            return;
-        } else if (remain < 0) {
-            // exceed the scope, stop exploration.
-            return;
-        }
-
-        for (int i = start; i < candidates.length; ++i) {
-            // add the number into the combination
-            comb.add(candidates[i]);
-            this.backtrack(remain - candidates[i], comb, i, candidates, results);
-            // backtrack, remove the number from the combination
-            comb.removeLast();
+    
+     void findAllways(int[] candidates,List<List<Integer>> finalList,ArrayList<Integer> list,int i,int target){
+        if(target == 0)
+            finalList.add(new ArrayList<Integer>(list));
+        else{
+            for(int j=i;j<candidates.length;j++)
+            {
+                if(candidates[j]<=target){
+                list.add(candidates[j]);
+                findAllways(candidates,finalList,list,j,target-candidates[j]);
+                list.remove(list.size()-1);
+                }
+            }
         }
     }
-
+    
     public List<List<Integer>> combinationSum(int[] candidates, int target) {
-        List<List<Integer>> results = new ArrayList<List<Integer>>();
-        LinkedList<Integer> comb = new LinkedList<Integer>();
-
-        this.backtrack(target, comb, 0, candidates, results);
-        return results;
+    
+        List<List<Integer>> finalList = new ArrayList<>();
+        ArrayList<Integer> list = new ArrayList<>();
+        findAllways(candidates,finalList,list,0,target);
+        
+        return finalList;
     }
+    
 }
